# rust-closures

./: Cargo.toml  README.md
examples/: clone.rs  iterator.rs  recursion.rs  return.rs  threads.rs
src/: lib.rs  macros.rs
