[package]
name = "closures"
description = "Abstraction for seperating code and state in closures"
version = "0.1.1"
authors = ["panicbit <panicbit.dev@gmail.com>"]
documentation = "https://docs.rs/closures"
repository = "https://github.com/panicbit/rust-closures"
keywords = ["closure", "traits", "clone", "eq", "unboxed"]
categories = ["no-std", "data-structures"]
license = "MIT/Apache-2.0"
